<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BadgeR for Steam</string>
    <string name="menu">Menu</string>

    <string name="cd_logo">Logo</string>
    <string name="text_login_description">Please enter your profile Custom URL</string>
    <string name="text_custom_url_base">http://steamcommunity.com/id/</string>
    <string name="hint_custom_url">Custom Url</string>
    <string name="action_login">Login</string>
    <string name="login_error">Error Requesting Data</string>

    <string name="cd_player_photo">Player Photo</string>
    <string name="button_badges">Badges</string>
    <string name="button_friends">Friends</string>

    <string name="cd_badge_image">Badge Image</string>
    <string name="action_refresh">Refresh</string>

    <string name="loading">Loading&#8230;</string>
    <string name="lvl">Lvl.: %d</string>
    <string name="xp">XP: %d</string>

</resources>
